<resources>
    <string name="app_name">DietProj</string>
    <string name="user_information">معلومات المستخدم</string>
    <string name="gender">الجنس</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="name">الاسم</string>
    <string name="weight_in_kg">الوزن (ك.ج)</string>
    <string name="height_in_cm">الطول (سنتيميتر)</string>
    <string name="age">العمر</string>
    <string name="save">حفظ</string>
    <string name="banana">موزة</string>
    <string name="apple">تفاحة</string>
    <string name="pear">كمثرى</string>
    <string name="hourGlass">الساعة الرملية</string>
    <string name="weight_goal_">الهدف في الوزن</string>
    <string name="shape_detect">تحديد شكل الجسم</string>
    <string name="shape_view"> شكل الجسم</string>
    <string name="main">الصفحة الرئيسية</string>
    <string name="info"> معلومات المستخدم</string>
    <string name="set_point">حفظ النقطة</string>
    <string name="step1">الخطوة الأولى: ألتقط صورتك كما هو موضح في الصورة على اليسار</string>
    <string name="step2">الخطوة الثانية:\nباستخدام اصبعك قم بتحديد نقطة بداية الصدر ونهايته</string>
    <string name="step3">الخطوة الثالثة:\nباستخدام اصبعك قم بتحديد نقطة بداية الخصر ونهايته</string>
    <string name="step4">الخطوة الرابعة:\nباستخدام اصبعك قم بتحديد نقطة بداية الورك ونهايته</string>
    <string name="set_point_1">حدد النقطة الأولى</string>
    <string name="set_point_2">حدد النقطة الثانية</string>
    <string name="change_info">تغيير معلومات المستخدم</string>
    <string name="diet_info"> معلومات الدايت</string>
    <string name="change_type">تحديد شكل الجسم</string>
    <string name="userName">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="login">دخول</string>
    <string name="register">مستخدم جديد</string>
    <string name="title_activity_login">الصفحة الرئيسية</string>
    <string-array name="diet1">

        <item>تناولى الأسماك ، وزيت الزيتون ، والمكسرات: الفاكهة والخضروات الطازجة والبقول</item>
        <item>منع الكافيين من المشروبات</item>
        <item>صعود الدرج والاجهزة ذات المقاومة العالية التي تركز على تنميو عضلات الجزء السفلي من الجسم</item>
        <item> ينصح بتمارين الكارديو ان تتعدى 15 دقيقة  ( مثل الجري الهرولة لتقوية الفخذين والارداف</item>
        <item>التركيز على التمارين العضلية لتقوية عضلات الصدر والكتفين والأرداف والفخذين </item>
    </string-array>
    <string-array name="diet2">
        <item>تناولي الدهون الأحادية غير المشبعة الموجودة فى المكسرات ، الأفوكادو ، وزيت الزيتون</item>
        <item>تناولى الكربوهيدرات المعززة بالألياف والمركبة مثل : البقول ، الفاكهة ، الخضروات </item>
        <item>الكارديو من 4 الى 5 مرات اسبوعيا لمده من 30 الى 40 دقيقة </item>
        <item>التركيز على تمارين الاوزان للأرداف والفخذين لمحاولة إيجاد تناسق بين محيط الأرداف والصدر</item>
        <item>ممارسة تمارين البطن باستمرار يوميا بطريقة خفيفة مع اختيار يوم للتركيز على منطقة البطن بشكل اكبر</item>
    </string-array>
    <string-array name="diet3">
        <item>تناولي الكربوهيدرات المركبة مثل : حبوب الإفطار بالحبة الكاملة ، العدس ، الفول ، والبروتين قليل الدسم</item>
        <item>الكارديو وخاصة المشي السريع ونط الحبل من 30 الى 40 دقيقة</item>
        <item>الايروبيك وقيادة الدرجات ولكن بدون اى زيادة في مقاومة الدراجة  للمساعدة على حرق الدهون في الجزء الاسفل</item>
        <item>التمارين العضلية او الاوزان للكتفين والصدر لمحاولة تحديد التناسق بين الكتفين والصدر مع الأرداف</item>
        <item>تمارين البطن الثابته مهمة لتقوية عضلة القطنية للحفاظ على التوازن الصحيح بين االجزء العلوى والسفلي للجسم</item>
       </string-array>
    <string-array name="diet4">
        <item>تناول كميات كبيره من الخضروات الطازجة وهذه أكثر طريقة للإنقاص</item>
        <item>منع الكافيين (القهوة والشاي والسكر ) والكاربوهيدرات مثل الدقيق الأبيض والأرز الأبيض</item>
        <item>ينصح بالكارديو الخفيف ( الجري الخفيف ، السباحة ، نط الحبل ، الدراجات )</item>
        <item>يجب أن يتبع الكارديو الخفيف التمارين العضلية الهادفة إلى تقوية عضلات الذراعــين والكتفـين</item>
        <item>يجب أن يتم ممارسة الكثير من تمارين التي تساعد على نحت البطن للوصول الى الشكل المثالي</item>
    </string-array>
</resources>
